# fast-cpp-csv-parser

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
cmake/: ClangFormat.cmake  ClangTidy.cmake  CppCheck.cmake
include/: csv.h  csv.hpp
tests/: CMakeLists.txt  test_csv_reader.cpp
tests/data/: test.csv
